# Flower

./: README.md  download_data.sh  main.py  pyproject.toml  requirements.txt  run_modal.py
config/: main_config.yaml
config/dataset_config/: gopro.yaml
pnpflow/: dataloaders.py  degradations.py  train_denoiser.py  train_flow_matching.py  training_utils.py  utils.py
pnpflow/methods/: d_flow.py  flow_priors.py  flower.py  flower_cov.py  ot_ode.py  pnp_diff.py  pnp_flow.py  pnp_gs.py
scripts/: afhq_validation_images.sh  script_test_afhq_flower_1_ot.sh  script_test_afhq_flower_5_ot.sh  script_test_afhq_flower_cov_1_ot.sh  script_test_afhq_flower_cov_5_ot.sh  script_test_afhq_otode.sh  script_test_afhq_pnp_flow.sh  script_train.sh  script_val.sh
